--- a/doc/RefCountPtr/RefCountPtrSAND.tex
+++ b/doc/RefCountPtr/RefCountPtrSAND.tex
@@ -73,15 +73,16 @@ Roscoe A. Bartlett \\ Optimization/Uncertainty Estim
 %
 \begin{abstract}
 %
-This document builds on the material in the document ``
-Teuchos::RefCountPtr 101: A Beginner's Guide to the Trilinos Smart
-Reference-Counted Pointer Class for (Almost) Automatic Dynamic Memory
-Management in C++''.  In this document we discuss the templated
-concrete C++ class {}\texttt{Teuchos::RefCountPtr<>} in more detail.
-We expand on the proper use of this new data type and how it relates
-to built-in C++ data types and other user-defined data types.  A
-variety of other issues related to \texttt{Teuchos::RefCountPtr<>} are
-also discussed.
+This document builds on the material in the document
+``Teuchos::RefCountPtr Beginner's Guide: An Introduction to the
+Trilinos Smart Reference-Counted Pointer Class for (Almost) Automatic
+Dynamic Memory Management in C++''.  In this document we discuss the
+templated concrete C++ class {}\texttt{Teuchos::RefCountPtr<>} in more
+detail and discuss in detail the use of extra data, deallocation
+policies and other topics.  We expand on the proper use of this new
+data type and how it relates to built-in C++ data types and other
+user-defined data types.  A variety of other issues related to
+\texttt{Teuchos::RefCountPtr<>} are also discussed.
 %
 \end{abstract}
 %
