--- a/doc/RefCountPtr/apdx_RefCountPtrDesign.tex
+++ b/doc/RefCountPtr/apdx_RefCountPtrDesign.tex
@@ -417,6 +417,8 @@ free the managed object.
 \subsection{Management of extra data}
 %
 
+ToDo: Update this for new specification for set\_extra\_data(...)!
+
 The last issue to discuss is how extra data is managed as described in
 Section {}\ref{rcp:sec:extra-data}.  As shown in Figure
 {}\ref{rcp:fig:rcp-class-diagram}, each
