--- a/doc/RefCountPtr/RefCountPtrBeginnersGuideSAND.tex
+++ b/doc/RefCountPtr/RefCountPtrBeginnersGuideSAND.tex
@@ -1056,8 +1056,9 @@ Thou shall never give a raw C++ pointer returned from operator
 \end{verbatim}}
 
 \begin{commandment}\label{rcp:cmd:rcp-new}
-Thou shall only pass in a raw C++ pointer created from {}\texttt{new[]}
-using {}\texttt{rcp(new C[n],DeallocArrayDelete<C)(),true)}.  See item
+Thou shall only create a {}\texttt{Ref\-Count\-Ptr<>} object using a
+raw C++ pointer created from {}\texttt{new[]} using {}\texttt{rcp(new
+C[n],DeallocArrayDelete<C)(),true)}.  See item
 ({}\ref{rcpqs:apdx:qs:array-new}) in Appendix
 {}\ref{rcpqs:apdx:quickstart}.
 \end{commandment}
@@ -1071,10 +1072,10 @@ returned from operator {}\texttt{new[]} to a
 {}\noindent{}Example:
 {\small\begin{verbatim}
   RefCountPtr<std::vector<C> > c_array_ptr1 = rcp(new std::vector<C>(N)); // Okay
-  RefCountPtr<C>               c_array_ptr2 = rcp(new C[N]
+  RefCountPtr<C>               c_array_ptr2 = rcp(new C[n]
                                                ,DeallocArrayDelete<C>()
                                                ,true);                    // Okay
-  RefCountPtr<C>               c_array_ptr3 = rcp(new C[N]);              // no, No, NO!
+  RefCountPtr<C>               c_array_ptr3 = rcp(new C[n]);              // no, No, NO!
 \end{verbatim}}
 
 \begin{commandment}
@@ -1158,11 +1159,11 @@ for various use cases and different types of objects.  These idioms
 show how to write function arguments prototypes which exploit the C++
 language in a way that makes these function prototypes as self
 documenting as possible, avoid coding errors and increase readability
-of C++ code.  In general, {}\texttt{Ref\-Count\-Ptr<>} objects should
-be passed and manipulated as though they where raw C++ pointers.  The
-main difference is that while raw C++ pointer objects should generally
-be passed by value, {}\texttt{Ref\-Count\-Ptr<>} objects should
-generally be passed by reference for several reasons (see
+of C++ code.  In general, {}\texttt{Ref\-Count\-Ptr<T>} objects should
+be passed and manipulated as though they where raw C++ pointer
+{}\texttt{T*} objects.  However, while raw C++ pointer objects should
+generally be passed by value, {}\texttt{Ref\-Count\-Ptr<>} objects
+should generally be passed by reference for several reasons (see
 {}\cite{ref:RefCountPtr} for more details).
 
 %
